# edith-dashboard

./: .env.example  .gitignore  CHANGES.md  CLAUDE.md  CLAUDE_2.md  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/v1/: agent_api.py  agents.py  artifacts.py  auth.py  comments.py  events.py  files.py  projects.py  router.py  sessions.py  settings.py  tasks.py
backend/app/core/: auth.py  deps.py  event_bus.py
backend/app/domain/: enums.py  models.py
backend/app/integrations/: notion.py  openclaw_gateway.py
backend/app/services/: agent_service.py  approval_context.py  comment_router.py  event_service.py  file_watcher.py  gateway_poller.py  main_session_presence.py  notion_sync.py  openclaw_config_reader.py  openclaw_session_truth.py  session_metadata.py  session_service.py  task_approval_hook.py  task_runtime.py  task_service.py
backend/app/storage/: agent_repo.py  artifact_repo.py  base.py  comment_repo.py  config_repo.py  event_repo.py  json_store.py  session_repo.py  task_repo.py
backend/app/ws/: handlers.py  hub.py
backend/tests/: test_approval_context.py  test_dashboard_approval_contract.py  test_openclaw_session_truth.py  test_session_metadata.py  test_task_approve_context_merge.py  test_task_hierarchy.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: agents.ts  artifacts.ts  client.ts  comments.ts  events.ts  files.ts  sessions.ts  tasks.ts
frontend/src/hooks/: useAuth.ts  (+1 more)
(+54 files in other folders)
